<resources>
    <string name="app_name">Lịch thiên niên kỷ</string>
    <string name="tv_calendar_day">Lịch ngày</string>
    <string name="tv_calendar_month">Lịch tháng</string>
    <string name="tv_setting">cài đặt</string>
    <string name="tv_today">Hôm nay</string>
    <string name="tv_event">sự kiện</string>
    <string name="tv_quote_demo">Khi chưa bắt tay vào công việc, sự lo lắng chỉ làm cho con người ta mệt mỏi</string>
    <string name="tv_author_demo">Sưu tầm</string>
    <string name="tv_hoang_dao">Ngày Hoàng Đạo</string>
    <string name="tv_hac_dao">Ngày Hắc Đạo</string>
    <string name="tv_solar_term">Tiết khí</string>
    <string name="tv_depart">Xuất hành</string>
    <string name="tv_star">Sao tốt sao xấu</string>
    <string name="tv_nhi_thap">Nhị thập bát cú </string>
    <string name="tv_lib_content">Thư viện nội dung</string>
    <string name="tv_pt">Phong tục</string>
    <string name="tv_festival">Lễ hội</string>
    <string name="tv_business">Phong thủy kinh doanh</string>
    <string name="tv_knowledge_pt">Kiến thức phong thủy</string>
    <string name="tv_convert_hour">Đổi giờ các nước</string>
    <string name="tv_vows">Văn khấn</string>
    <string name="tv_location">Hướng</string>
    <string name="tv_hour_good">Giờ hoàng đạo</string>
</resources>