<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/header_setting_container"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/ic_setting_user"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginStart="10dp"
                android:src="@drawable/ic_user"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/poppins_medium"
                android:includeFontPadding="false"
                android:text="Thông tin"
                android:textColor="@color/black_normal"
                android:textSize="18dp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/ic_setting_user"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:layout_marginEnd="10dp"
                android:src="@drawable/ic_setting"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/dark_blue" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/line_border_grey"
                app:layout_constraintBottom_toBottomOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:id="@+id/ln_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/header_setting_container">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_lib_content"
                android:fontFamily="@font/poppins_bold"
                android:textColor="@color/orange"
                android:textSize="20sp"/>
            
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="3">

                <LinearLayout
                    android:id="@+id/btn_pt"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    >

                   <androidx.cardview.widget.CardView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:layout_gravity="center"
                       app:cardCornerRadius="20dp"
                       android:background="@color/orange">
                       <ImageView
                           android:layout_width="40dp"
                           android:layout_height="40dp"
                           android:src="@drawable/icon_le_hoi"
                           android:scaleType="centerCrop"/>
                   </androidx.cardview.widget.CardView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tv_pt"
                        android:layout_gravity="center"
                        android:fontFamily="@font/poppins_bold"
                        android:textColor="@color/black"
                        android:layout_marginTop="5dp"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/btn_festival"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    >

                    <androidx.cardview.widget.CardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        app:cardCornerRadius="20dp"
                        android:background="@color/orange">
                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:src="@drawable/ic_vows"
                            android:scaleType="centerCrop"/>
                    </androidx.cardview.widget.CardView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tv_festival"
                        android:layout_gravity="center"
                        android:fontFamily="@font/poppins_bold"
                        android:textColor="@color/black"
                        android:layout_marginTop="5dp"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/btn_business_pt"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    >

                    <androidx.cardview.widget.CardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        app:cardCornerRadius="20dp"
                        android:background="@color/orange">
                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:src="@drawable/ic_business"
                            android:scaleType="centerCrop"/>
                    </androidx.cardview.widget.CardView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tv_business"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:fontFamily="@font/poppins_bold"
                        android:textColor="@color/black"
                        android:layout_marginTop="5dp"/>

                </LinearLayout>


                </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="3">

                <LinearLayout
                    android:id="@+id/btn_knowledge_pt"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    >

                    <androidx.cardview.widget.CardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        app:cardCornerRadius="20dp"
                        android:background="@color/orange">
                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:src="@drawable/ic_kt_pt"
                            android:scaleType="centerCrop"/>
                    </androidx.cardview.widget.CardView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tv_knowledge_pt"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:fontFamily="@font/poppins_bold"
                        android:textColor="@color/black"
                        android:layout_marginTop="5dp"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/btn_convert_hour"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    >

                    <androidx.cardview.widget.CardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        app:cardCornerRadius="20dp"
                        android:background="@color/orange">
                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:src="@drawable/ic_convert_hour"
                            android:scaleType="centerCrop"/>
                    </androidx.cardview.widget.CardView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tv_convert_hour"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:fontFamily="@font/poppins_bold"
                        android:textColor="@color/black"
                        android:layout_marginTop="5dp"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/btn_vows"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    >

                    <androidx.cardview.widget.CardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        app:cardCornerRadius="20dp"
                        android:background="@color/orange">
                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:src="@drawable/icon_van_khan"
                            android:scaleType="centerCrop"/>
                    </androidx.cardview.widget.CardView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tv_vows"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:fontFamily="@font/poppins_bold"
                        android:textColor="@color/black"
                        android:layout_marginTop="5dp"/>

                </LinearLayout>
            </LinearLayout>

                
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:background="@color/line_border_grey"
            app:layout_constraintTop_toBottomOf="@id/ln_1"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>